Better use of flexbox design

--- a/index.html
+++ b/index.html
@@ -12,105 +12,99 @@ April 1, 2017
 
 <!-- Used W3 schools for basics of CSS; https://www.w3schools.com/css/css_howto.asp -->
 <!-- https://www.w3schools.com/css/css_syntax.asp -->
+<!-- https://www.w3schools.com/html/html_images.asp -->
 
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sapphire Finance</title>
+    <title>Emerald Image Editing</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
   </head>
 
   <body>
 
     <div class="cover">
 
-      <nav>
-
+      <nav class="nav">
+        <div>
+          <p class="logo">Emerald</p>
+        </div>
         <ul>
-          <li><a href="#">Roster</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Schedule</a></li>
-          <li><a href="#">Forum</a></li>
+          <li><a href="#">Order</a></li>
+          <li><a href="#">Trial</a></li>
+          <li id="product"><a href="#">Product</a></li>
+          <li id="help"><a href="#">Help</a></li>
         </ul>
       </nav>
 
       <div class="flex-container1">
 
-        <h1>Sapphire Finance App</h1>
+        <h1>Emerald Image Editing</h1>
 
-        <p>A new way to manage your money</p>
+        <p id="motto">A new way to customize photos</p>
 
         <form id="form">
           <input type="text" name="email" placeholder="Email Address" id="input">
           <button type="button" id="button">Submit</button>
-          <p>Check out the links below for more information</p>
+          <p>Check out the links below for more information!</p>
         </form>
 
       </div>
 
-      <div id="transition">
+      <div class="flex-container2">
 
-        <p>What is going on</p>
+        <ul>
+          <li><h3>Features</h3></li>
+          <li class="dropdown">Information 1</li>
+          <li class="dropdown">Information 2</li>
+          <li class="dropdown">Information 3</li>
+          <li class="dropdown">Information 4</li>
+          <li class="dropdown">Information 5</li>
+        </ul>
+
+        <ul>
+          <li><h3>Examples</h3></li>
+          <li class="dropdown">Information 1</li>
+          <li class="dropdown">Information 2</li>
+          <li class="dropdown">Information 3</li>
+          <li class="dropdown">Information 4</li>
+          <li class="dropdown">Information 5</li>
+        </ul>
+
+        <ul>
+          <li><h3>Reviews</h3></li>
+          <li class="dropdown">Information 1</li>
+          <li class="dropdown">Information 2</li>
+          <li class="dropdown">Information 3</li>
+          <li class="dropdown">Information 4</li>
+          <li class="dropdown">Information 5</li>
+        </ul>
+
+        <ul>
+          <li><h3>Other</h3></li>
+          <li class="dropdown">Information 1</li>
+          <li class="dropdown">Information 2</li>
+          <li class="dropdown">Information 3</li>
+          <li class="dropdown">Information 4</li>
+          <li class="dropdown">Information 5</li>
+        </ul>
 
       </div>
 
-      <div class="gradient">
+      <!-- Adapted FontAwesome icon code from this link http://fontawesome.io/examples/ -->
 
-        <div class="flex-container2">
-
-          <ul>
-            <li>Features</li>
-            <li>Information 1</li>
-            <li>Information 2</li>
-            <li>Information 3</li>
-            <li>Information 4</li>
-            <li>Information 5</li>
-          </ul>
-
-          <ul>
-            <li>Examples</li>
-            <li>Information 1</li>
-            <li>Information 2</li>
-            <li>Information 3</li>
-            <li>Information 4</li>
-            <li>Information 5</li>
-          </ul>
-
-          <ul>
-            <li>Reviews</li>
-            <li>Information 1</li>
-            <li>Information 2</li>
-            <li>Information 3</li>
-            <li>Information 4</li>
-            <li>Information 5</li>
-          </ul>
-
-          <ul>
-            <li>Other</li>
-            <li>Information 1</li>
-            <li>Information 2</li>
-            <li>Information 3</li>
-            <li>Information 4</li>
-            <li>Information 5</li>
-          </ul>
-
+      <footer class="footer">
+        <div>
+          <p class="logo">Emerald</p>
         </div>
-
-
-        <!-- Adapted FontAwesome icon code from this link http://fontawesome.io/examples/ -->
-
-        <footer>
-          <!-- <a href="#">Icon</a> -->
-          <ul>
-            <li><a href="#"><i class="fa fa-envelope-square fa-3x"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter-square fa-3x"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-          </ul>
-        </footer>
-
-      </div>
+        <ul>
+          <li><a href="#"><i class="fa fa-envelope-square fa-3x"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter-square fa-3x"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+        </ul>
+      </footer>
 
     </div>
 
