made some more updates to styling

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ April 1, 2017
         <ul>
           <li><a href="#">Order</a></li>
           <li><a href="#">Trial</a></li>
-          <li id="product"><a href="#">Product</a></li>
-          <li id="help"><a href="#">Help</a></li>
+          <li><a href="#">Product</a></li>
+          <li id="signup"><a href="#">Sign Up</a></li>
         </ul>
       </nav>
 
@@ -48,7 +48,7 @@ April 1, 2017
         <form id="form">
           <input type="text" name="email" placeholder="Email Address" id="input">
           <button type="button" id="button">Submit</button>
-          <p>Check out the links below for more information!</p>
+          <p id="wrap">Check out the links below for more information!</p>
         </form>
 
       </div>
