--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ April 1, 2017
 <!-- https://www.w3schools.com/tags/tag_nav.asp -->
 <!-- https://www.w3schools.com/html/html_form_input_types.asp -->
 <!-- Google Fonts was used for Railway font -->
+<!-- Used Slack.com for inspiration! -->
 
 <!-- Used W3 schools for basics of CSS; https://www.w3schools.com/css/css_howto.asp -->
 <!-- https://www.w3schools.com/css/css_syntax.asp -->
