--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@ April 1, 2017
           <p class="logo">Emerald</p>
         </div>
         <ul>
-          <li><a href="#">Order</a></li>
-          <li><a href="#">Trial</a></li>
-          <li><a href="#">Product</a></li>
-          <li id="signup"><a href="#">Sign Up</a></li>
+          <li class="menu"><a href="#">Menu</a></li>
+          <li class="dropdown"><a href="#">Order</a></li>
+          <li class="dropdown"><a href="#">Trial</a></li>
+          <li class="dropdown"><a href="#">Product</a></li>
+          <li class="dropdown"id="signup"><a href="#">Sign Up</a></li>
         </ul>
       </nav>
 
@@ -57,7 +58,11 @@ April 1, 2017
       <div class="flex-container2">
 
         <ul>
-          <li><h3>Features</h3></li>
+          <div id="plus">
+            <li><h3>Features</h3></li>
+            <i class="fa fa-plus" aria-hidden="true"></i>
+          </div>
+          <li class="dropdown"><h3>Features</h3></li>
           <li class="dropdown">Information 1</li>
           <li class="dropdown">Information 2</li>
           <li class="dropdown">Information 3</li>
@@ -66,7 +71,11 @@ April 1, 2017
         </ul>
 
         <ul>
-          <li><h3>Examples</h3></li>
+          <div id="plus">
+            <li><h3>Examples</h3></li>
+            <i class="fa fa-plus" aria-hidden="true"></i>
+          </div>
+          <li class="dropdown"><h3>Examples</h3></li>
           <li class="dropdown">Information 1</li>
           <li class="dropdown">Information 2</li>
           <li class="dropdown">Information 3</li>
@@ -75,7 +84,11 @@ April 1, 2017
         </ul>
 
         <ul>
-          <li><h3>Reviews</h3></li>
+          <div id="plus">
+            <li><h3>Reviews</h3></li>
+            <i class="fa fa-plus" aria-hidden="true"></i>
+          </div>
+          <li class="dropdown"><h3>Reviews</h3></li>
           <li class="dropdown">Information 1</li>
           <li class="dropdown">Information 2</li>
           <li class="dropdown">Information 3</li>
@@ -84,7 +97,11 @@ April 1, 2017
         </ul>
 
         <ul>
-          <li><h3>Other</h3></li>
+          <div id="plus">
+            <li><h3>Other</h3></li>
+            <i class="fa fa-plus" aria-hidden="true"></i>
+          </div>
+          <li class="dropdown"><h3>Other</h3></li>
           <li class="dropdown">Information 1</li>
           <li class="dropdown">Information 2</li>
           <li class="dropdown">Information 3</li>
