--- a/index.html
+++ b/index.html
@@ -58,56 +58,60 @@ April 1, 2017
       <div class="flex-container2">
 
         <ul>
-          <div id="plus">
-            <li><h3>Features</h3></li>
-            <i class="fa fa-plus" aria-hidden="true"></i>
-          </div>
-          <li class="dropdown"><h3>Features</h3></li>
-          <li class="dropdown">Information 1</li>
-          <li class="dropdown">Information 2</li>
-          <li class="dropdown">Information 3</li>
-          <li class="dropdown">Information 4</li>
-          <li class="dropdown">Information 5</li>
+          <li><h3>Features</h3></li>
+          <li>Information 1</li>
+          <li>Information 2</li>
+          <li>Information 3</li>
+          <li>Information 4</li>
+          <li>Information 5</li>
         </ul>
 
-        <ul>
-          <div id="plus">
-            <li><h3>Examples</h3></li>
-            <i class="fa fa-plus" aria-hidden="true"></i>
-          </div>
-          <li class="dropdown"><h3>Examples</h3></li>
-          <li class="dropdown">Information 1</li>
-          <li class="dropdown">Information 2</li>
-          <li class="dropdown">Information 3</li>
-          <li class="dropdown">Information 4</li>
-          <li class="dropdown">Information 5</li>
-        </ul>
+        <div id="plus">
+          <li><h3>Features</h3></li>
+          <i class="fa fa-plus" aria-hidden="true"></i>
+        </div>
 
         <ul>
-          <div id="plus">
-            <li><h3>Reviews</h3></li>
-            <i class="fa fa-plus" aria-hidden="true"></i>
-          </div>
-          <li class="dropdown"><h3>Reviews</h3></li>
-          <li class="dropdown">Information 1</li>
-          <li class="dropdown">Information 2</li>
-          <li class="dropdown">Information 3</li>
-          <li class="dropdown">Information 4</li>
-          <li class="dropdown">Information 5</li>
+          <li><h3>Examples</h3></li>
+          <li>Information 1</li>
+          <li>Information 2</li>
+          <li>Information 3</li>
+          <li>Information 4</li>
+          <li>Information 5</li>
         </ul>
 
+        <div id="plus">
+          <li><h3>Examples</h3></li>
+          <i class="fa fa-plus" aria-hidden="true"></i>
+        </div>
+
         <ul>
-          <div id="plus">
-            <li><h3>Other</h3></li>
-            <i class="fa fa-plus" aria-hidden="true"></i>
-          </div>
-          <li class="dropdown"><h3>Other</h3></li>
-          <li class="dropdown">Information 1</li>
-          <li class="dropdown">Information 2</li>
-          <li class="dropdown">Information 3</li>
-          <li class="dropdown">Information 4</li>
-          <li class="dropdown">Information 5</li>
+          <li><h3>Reviews</h3></li>
+          <li>Information 1</li>
+          <li>Information 2</li>
+          <li>Information 3</li>
+          <li>Information 4</li>
+          <li>Information 5</li>
         </ul>
+
+        <div id="plus">
+          <li><h3>Reviews</h3></li>
+          <i class="fa fa-plus" aria-hidden="true"></i>
+        </div>
+
+        <ul>
+          <li><h3>Other</h3></li>
+          <li>Information 1</li>
+          <li>Information 2</li>
+          <li>Information 3</li>
+          <li>Information 4</li>
+          <li>Information 5</li>
+        </ul>
+
+        <div id="plus">
+          <li><h3>Other</h3></li>
+          <i class="fa fa-plus" aria-hidden="true"></i>
+        </div>
 
       </div>
 
