Added checkbox hack functionality for menu

--- a/index.html
+++ b/index.html
@@ -29,16 +29,29 @@ April 1, 2017
     <div class="cover">
 
       <nav class="nav">
+
         <div>
           <p class="logo">Emerald</p>
         </div>
+
+        <div class="click-menu">
+          <input type="checkbox" id="checkbox-toggle">
+          <label for="checkbox-toggle">Click for Menu</label>
+          <ul>
+            <li>Order</li>
+            <li>Trial</li>
+            <li>Product</li>
+            <li>Sign Up</li>
+          </ul>
+        </div>
+
         <ul>
-          <li class="menu"><a href="#">Menu</a></li>
           <li class="dropdown"><a href="#">Order</a></li>
           <li class="dropdown"><a href="#">Trial</a></li>
           <li class="dropdown"><a href="#">Product</a></li>
           <li class="dropdown"id="signup"><a href="#">Sign Up</a></li>
         </ul>
+
       </nav>
 
       <div class="flex-container1">
@@ -68,7 +81,7 @@ April 1, 2017
 
         <div id="plus">
           <li><h3>Features</h3></li>
-          <i class="fa fa-plus" aria-hidden="true"></i>
+          <a href="#"><i class="fa fa-plus"></i></a>
         </div>
 
         <ul>
@@ -82,7 +95,7 @@ April 1, 2017
 
         <div id="plus">
           <li><h3>Examples</h3></li>
-          <i class="fa fa-plus" aria-hidden="true"></i>
+          <a href="#"><i class="fa fa-plus"></i></a>
         </div>
 
         <ul>
@@ -96,7 +109,7 @@ April 1, 2017
 
         <div id="plus">
           <li><h3>Reviews</h3></li>
-          <i class="fa fa-plus" aria-hidden="true"></i>
+          <a href="#"><i class="fa fa-plus"></i></a>
         </div>
 
         <ul>
@@ -110,7 +123,7 @@ April 1, 2017
 
         <div id="plus">
           <li><h3>Other</h3></li>
-          <i class="fa fa-plus" aria-hidden="true"></i>
+          <a href="#"><i class="fa fa-plus"></i></a>
         </div>
 
       </div>
