Cleaned up some code structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Computer Science 52: Professor Tregubov
 April 1, 2017
 -->
 
-<!-- Used W3 schools tutorials and Slack.com for inspiration -->
+<!-- Used W3 schools tutorials and Slack.com for inspiration! -->
 <!-- https://www.w3schools.com/tags/tag_nav.asp -->
 <!-- https://www.w3schools.com/html/html_form_input_types.asp -->
 <!-- Google Fonts was used for Railway font -->
@@ -62,7 +62,7 @@ April 1, 2017
 
         <form id="form">
           <input type="text" name="email" placeholder="Email Address" id="input">
-          <button type="button" id="button">Submit</button>
+          <button type="button" id="button"><a href="#">Submit</a></button>
           <p id="wrap">Check out the links below for more information!</p>
         </form>
 
